B&L QA/objects/Machine_Detail__c.object
<CustomObject>
    <description>Details of surgical machines installed at a customer location; includes contract and service contract details. Linked to Account Profile.
Used by EMEA SU. and USSUR</description>
    <fields>
        <fullName>Account__c</fullName>
        <description>Used by EMEASU</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Machine Details</relationshipLabel>
        <relationshipName>Machine_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Contract_Type__c</fullName>
        <description>Type of contract on this machine.
Used by EMEA SU.</description>
        <label>Contract Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sold</fullName>
                </value>
                <value>
                    <fullName>Rental</fullName>
                </value>
                <value>
                    <fullName>Per Procedure</fullName>
                </value>
                <value>
                    <fullName>Placement</fullName>
                </value>
                <value>
                    <fullName>Bundling</fullName>
                </value>
                <value>
                    <fullName>Leased and Sold</fullName>
                </value>
                <value>
                    <fullName>Service Distributor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <description>The date the machine&apos;s service contract expires.
Used by EMEA SU.</description>
        <label>Service Contract End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Install_Date__c</fullName>
        <description>Used by EMEASU</description>
        <label>Install Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Install_Year__c</fullName>
        <description>The year this machine was installed.
Used by EMEA SU.</description>
        <label>Install Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Install_end_date__c</fullName>
        <description>For when a machine is placed for a set number of years as part of a bundling deal and needs to be either renegotiated or removed when this period ends</description>
        <inlineHelpText>For when a machine is placed for a set number of years as part of a bundling deal and needs to be either renegotiated or removed when this period ends</inlineHelpText>
        <label>Install end date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Legacy_System_Id__c</fullName>
        <description>Contains the unique [SetID][SiteID] reference from the Account Profile in PS CRM where the converted records originated. Used by EMEAVC.</description>
        <label>Legacy System Id</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Machine_Type__c</fullName>
        <description>Used by EMEA SU and US SUR</description>
        <label>Machine Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Anterior</fullName>
                </value>
                <value>
                    <fullName>B+L Demo</fullName>
                </value>
                <value>
                    <fullName>Combined</fullName>
                </value>
                <value>
                    <fullName>ECCIMERI</fullName>
                </value>
                <value>
                    <fullName>Femto</fullName>
                </value>
                <value>
                    <fullName>Femtolaser Cataract</fullName>
                </value>
                <value>
                    <fullName>Microscope</fullName>
                </value>
                <value>
                    <fullName>Phaco</fullName>
                </value>
                <value>
                    <fullName>Posterior</fullName>
                </value>
                <value>
                    <fullName>SOLTA</fullName>
                </value>
                <value>
                    <fullName>VR</fullName>
                </value>
                <value>
                    <fullName>ZDW</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Model__c</fullName>
        <description>Details the make/model of one machine installed at the site.
Used by EMEA SU.</description>
        <label>Model</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Machine_Type__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>ALCON - Accurus</fullName>
                </value>
                <value>
                    <fullName>ALCON - Centurion</fullName>
                </value>
                <value>
                    <fullName>ALCON - Constellation</fullName>
                </value>
                <value>
                    <fullName>ALCON - F200S</fullName>
                </value>
                <value>
                    <fullName>ALCON - Infiniti</fullName>
                </value>
                <value>
                    <fullName>ALCON - Legacy</fullName>
                </value>
                <value>
                    <fullName>ALCON - LensX</fullName>
                </value>
                <value>
                    <fullName>ALCON - WaveLight EX500</fullName>
                </value>
                <value>
                    <fullName>AMO - Catalys</fullName>
                </value>
                <value>
                    <fullName>AMO - Intralase</fullName>
                </value>
                <value>
                    <fullName>AMO - Signature</fullName>
                </value>
                <value>
                    <fullName>AMO - Sovereign</fullName>
                </value>
                <value>
                    <fullName>AMO - Sovereign Compact</fullName>
                </value>
                <value>
                    <fullName>AMO - Sovereign Signature</fullName>
                </value>
                <value>
                    <fullName>AMO - Sovereign Whitestar</fullName>
                </value>
                <value>
                    <fullName>AMO - Visx</fullName>
                </value>
                <value>
                    <fullName>B+L - Laser 217</fullName>
                </value>
                <value>
                    <fullName>B+L - Millennium Anterior</fullName>
                </value>
                <value>
                    <fullName>B+L - Millennium Combo</fullName>
                </value>
                <value>
                    <fullName>B+L - Millennium with MVE</fullName>
                </value>
                <value>
                    <fullName>B+L - Stellaris</fullName>
                </value>
                <value>
                    <fullName>B+L - Stellaris PC</fullName>
                </value>
                <value>
                    <fullName>B+L - Stellaris PC NGX</fullName>
                </value>
                <value>
                    <fullName>B+L TENEO</fullName>
                </value>
                <value>
                    <fullName>B+L - TENEO</fullName>
                </value>
                <value>
                    <fullName>B+L - Victus</fullName>
                </value>
                <value>
                    <fullName>C+B PERMEA</fullName>
                </value>
                <value>
                    <fullName>CORNEAL - Open</fullName>
                </value>
                <value>
                    <fullName>DORC - Eva</fullName>
                </value>
                <value>
                    <fullName>FRAXEL DUAL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Primary_Territory_Manager__c</fullName>
        <description>Displays the Primary TM from Account Object</description>
        <formula>HYPERLINK(&apos;/&apos; &amp; Account__r.Primary_Sales_Rep__r.Id , Account__r.Primary_Sales_Rep__r.FirstName &amp; &apos; &apos; &amp; Account__r.Primary_Sales_Rep__r.LastName )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Territory Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Serial_Number__c</fullName>
        <description>Used by EMEASU</description>
        <label>Serial Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Contract_Start_Date__c</fullName>
        <description>Service Contract Start Date</description>
        <label>Service Contract Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Service_Contract_Type__c</fullName>
        <description>If Service Contract? is checked then allow the TM to log whether the cover is fully comprehensive or standard.
Used by EMEA SU.</description>
        <label>Service Contract Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Service_Contract__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Fully comp</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Standard</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Service_Contract__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Tracks whether the machine has a service contract.
Used by EMEA SU.</description>
        <label>Service Contract?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SetID__c</fullName>
        <description>Displays SetID from Account Object</description>
        <formula>Account__r.SETID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SetID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Uninstalled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether the machine has been removed/uninstalled. Used by EMEA SU.</description>
        <label>Uninstalled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Warranty_End_Date__c</fullName>
        <label>Warranty End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Warranty__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Warranty</label>
        <type>Checkbox</type>
    </fields>
    <label>Machine Detail</label>
    <nameField>
        <displayFormat>M-{000}</displayFormat>
        <label>Machine Ref</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Machine Details</pluralLabel>
    <recordTypes>
        <fullName>APACSU</fullName>
        <active>true</active>
        <description>APAC Surgical</description>
        <label>APACSU</label>
    </recordTypes>
    <recordTypes>
        <fullName>EMEA_SU</fullName>
        <active>true</active>
        <description>Machine details record type for EMEA SU.</description>
        <label>EMEA SU</label>
    </recordTypes>
    <recordTypes>
        <fullName>USSUR</fullName>
        <active>true</active>
        <description>US Surgical</description>
        <label>USSUR</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>